[package]
name = "arcshift"
version = "0.1.0"
documentation = "https://docs.rs/arcshift/"
homepage = "https://github.com/avl/arcshift/"
repository = "https://github.com/avl/arcshift/"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Replacement for std::sync::Arc<T> that supports updating the value."
readme = "../README.md"
keywords = ["arc", "atomic"]
categories = ["memory-management", "data-structures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
shuttle = {version = "0.7", optional = true}

[features]
validate = []
debug = []

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
crossbeam-channel = "0.5"
rand="0.8"
mutants = "0"
