[package]
name = "arcshift"
version = "0.1.1"
documentation = "https://docs.rs/arcshift/"
homepage = "https://github.com/avl/arcshift/"
repository = "https://github.com/avl/arcshift/"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Replacement for std::sync::Arc<T> that supports updating the value."
readme = "../README.md"
keywords = ["arc", "atomic"]
categories = ["memory-management", "data-structures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]

[features]
# Feature to enable extra validation, at a memory and performance cost.
# Only intended for internal use, for verification.
validate = []
# Feature to enable extra debug output on stdout.
# Only intended for internal use, for verification and troubleshooting.
debug = []
# Feature which disables the slowest tests
disable_slow_tests = []
# Feature for internal use, for testing using the 'shuttle' framework
shuttle = []

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
crossbeam-channel = "0.5"
rand="0.8"
mutants = "0"
shuttle = {version = "0.7"}
